RichwoodNew/src/objects/BoxCCredentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>220</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clien_Secret__c</fullName>
        <label>Clien Secret</label>
        <length>220</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>220</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>220</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Folder_Id__c</fullName>
        <label>Root Folder Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Box Credentials &amp; Root Folder</label>
</CustomObject>